--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>ROBOT</title>
     <meta name="description" content="idk something about ur bot goes here">
     <meta name="theme-color" content="#f54254">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="src/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="src/assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="srcassets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="src/assets/css/styles.css">
 </head>
 
 <body style="background-color: var(--background);">
@@ -30,7 +30,7 @@
     </div>
     </nav>
     </div>
-    <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center" style="height: 418px;text-align: center;margin: 55px;"><img class="rounded" src="/assets/img/bot.png" width="150" height="150" style="margin-top: 30px;">
+    <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center" style="height: 418px;text-align: center;margin: 55px;"><img class="rounded" src="/src/assets/img/bot.png" width="150" height="150" style="margin-top: 30px;">
         <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">OP BOT</h1>
         <p style="color: var(--secondary-text-color);">The Best Multipurpose Bot!</p>
         <div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.com/api/oauth2/authorize?client_id=1022434881411764304&permissions=8&scope=bot%20applications.commands" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite Me</a>
@@ -213,10 +213,10 @@ wouldyourather command
             <p class="credits" style="color: var(--text-color);">Made By Rayhan</p>
         </div>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/Counting.js"></script>
-    <script src="assets/js/untitled.js"></script>
+    <script src="src/assets/js/jquery.min.js"></script>
+    <script src="src/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="src/assets/js/Counting.js"></script>
+    <script src="src/assets/js/untitled.js"></script>
 </body>
 
 </html>
